--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,15 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+sourceSets {
+  main {
+    resources {
+        srcDirs = ["src/main/java"]
+        includes = ["**/*.fxml"]
+    }
+  }
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'scale_legends.App'
