--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 
+    // MYSQL connector
+    implementation "mysql:mysql-connector-java:6.0.6"
 }
 
 javafx {
